Got xss working

--- a/web/index.html
+++ b/web/index.html
@@ -67,11 +67,15 @@
 		<div id="contentBG"></div>
 		<div id="container" class="full-width center">
 			<div class="container_12">
-				
+				<div class="main-col12">
+					<h1>Page Header Goes Here</h1>
+				</div>
+
+
 				<!-- Right Column -->
 				<div class="main-col8 tablet-col5 clearfix border-right">
 					<section class="module mediablock">
-						<h1>What is this?</h1>
+						<h2>What Is This?</h2>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 						<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 					</section>
